--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 <body>
     <input type="file" accept="audio/*">
     <audio></audio>
+    <canvas></canvas>
     <script src="./script.js"></script>
     
 </body>
